add (yet empty) demo and test projects

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <packaging>pom</packaging>
 
   <modules>
-    <module>${project.name}-demo</module>
+    <module>${project.name}</module>
     <module>${project.name}-test</module>
     <module>${project.name}-product</module>
   </modules>
