--- a/persistence-demo/pom.xml
+++ b/persistence-demo/pom.xml
@@ -17,6 +17,22 @@
       <groupId>com.axonivy.ivy.api</groupId>
       <artifactId>ivy-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>jakarta.data</groupId>
+      <artifactId>jakarta.data-api</artifactId>
+      <version>1.0.1</version> <!-- remove me once we provide it form the core -->
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-processor</artifactId><!-- generates repo impls-->
+      <version>7.0.3.Final</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
+      <version>2.0.1</version><!-- jakarta.data repos use it in generated code -->
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
@@ -39,6 +55,13 @@
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
+        <configuration>
+          <compilerOptions>
+            <compilerOption>-XprintProcessorInfo</compilerOption>
+            <compilerOption>-s</compilerOption>
+            <compilerOption>src_dataClasses</compilerOption>
+          </compilerOptions>
+        </configuration>
       </plugin>
     </plugins>
   </build>
