opt-in to latest build-plugin to comply with 13.2

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,3 +9,5 @@ on:
 jobs:
   build:
     uses: axonivy-market/github-workflows/.github/workflows/dev.yml@v6
+    with:
+      ivyPluginVersion: 13.2.0-SNAPSHOT
