--- a/persistence-demo/pom.xml
+++ b/persistence-demo/pom.xml
@@ -18,20 +18,10 @@
       <artifactId>ivy-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>jakarta.data</groupId>
-      <artifactId>jakarta.data-api</artifactId>
-      <version>1.0.1</version> <!-- remove me once we provide it form the core -->
-    </dependency>
-    <dependency>
       <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-processor</artifactId><!-- generates repo impls-->
       <version>7.0.3.Final</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.inject</groupId>
-      <artifactId>jakarta.inject-api</artifactId>
-      <version>2.0.1</version><!-- jakarta.data repos use it in generated code -->
     </dependency>
   </dependencies>
   <repositories>
@@ -65,4 +55,13 @@
       </plugin>
     </plugins>
   </build>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>jakarta.inject</groupId>
+        <artifactId>jakarta.inject-api</artifactId>
+        <version>2.0.1</version><!-- jakarta.data repos use it in generated code -->
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
